<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">


            <EditText
                    android:id="@+id/edTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ed_title"
                    app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                    android:id="@+id/edTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/edTitle"
                    android:layout_marginTop="10dp"
                    android:inputType="none"
                    android:focusable="false"
                    android:hint="@string/ed_tag"/>

            <LinearLayout
                    android:id="@+id/btnContainer"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/edTag"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="parent">

                <Button
                        android:id="@+id/btnAddImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/btn_add_img"
                        android:layout_marginEnd="20dp"/>


                <Button
                        android:id="@+id/btnDeleteImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/btn_delete_img"/>
            </LinearLayout>


            <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/btnContainer"
                    android:scaleType="fitCenter"/>

            <Button
                    android:id="@+id/btnCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/btn_create"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</layout>